Repaired homework according to the points table: one class for each minion and hero. Thus, abilities and minions are no longer detached from one another. Still need to find a better way to construct hashmaps.
Signed-off-by: Darius-Constantin <darius.constantin04@stud.acs.upb.ro>