@@ -1,7 +1,9 @@
 package org.poo.game.entities;
 
 import com.fasterxml.jackson.annotation.JsonIgnore;
+import org.poo.fileio.IOHandler;
 import org.poo.game.cards.Card;
+import org.poo.game.cards.HeroCard;
 import org.poo.game.cards.MinionCard;
 import org.poo.game.Game;
 import lombok.Getter;
@@ -37,7 +39,7 @@ public class Hero extends Entity {
         if (availableCards.isEmpty()) {
             return;
         }
-        inHandCards.add(availableCards.remove(0));
+        inHandCards.add(availableCards.removeFirst());
     }
 
     public MinionCard removeCard(final int idx) {
@@ -58,5 +60,43 @@ public class Hero extends Entity {
         super.reset();
         this.mana += manaToAdd;
         drawCard();
+    }
+
+    public boolean isEnemyRow(final int rowIdx) {
+        return (playerIdx == 0 && rowIdx <= 1) || (playerIdx == 1 && rowIdx >= 2);
+    }
+
+    public void useAbility(final Minion[] row, final int rowIdx) {
+        if (card.getMana() > this.mana) {
+            IOHandler.INSTANCE.writeToObject("error",
+                    "Not enough mana to use hero's ability.");
+            IOHandler.INSTANCE.writeObjectToOutput();
+            return;
+        }
+
+        if (!this.canAct) {
+            IOHandler.INSTANCE.writeToObject("error",
+                    "Hero has already attacked this turn.");
+            IOHandler.INSTANCE.writeObjectToOutput();
+            return;
+        }
+
+        if (((HeroCard) card).isAbilityAffectEnemy() && !isEnemyRow(rowIdx)) {
+            IOHandler.INSTANCE.writeToObject("error",
+                    "Selected row does not belong to the enemy.");
+            IOHandler.INSTANCE.writeObjectToOutput();
+            return;
+        }
+
+        if (!((HeroCard) card).isAbilityAffectEnemy() && isEnemyRow(rowIdx)) {
+            IOHandler.INSTANCE.writeToObject("error",
+                    "Selected row does not belong to the current player.");
+            IOHandler.INSTANCE.writeObjectToOutput();
+            return;
+        }
+
+        addMana(-1 * card.getMana());
+        ((HeroCard) card).useAbility(row);
+        this.setCanAct(false);
     }
 }
